# EngineFixesSkyrim64

./: .gitmodules  CMakeLists.txt  CMakePresets.json  vcpkg.json
cmake/: sourcelist.cmake
src/: PCH.h  debug.h  main.cpp  patches.h
src/debug/: debug1.cpp
src/patches/: allocators.cpp  formcaching.cpp  memorymanager.cpp  treelodreferencecaching.cpp
